# CPP_zia_github

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  main.cpp  oui  oui.json  runDockerized.sh  toto  zia_async
api/: EHttpMethod.hpp  EModuleStatus.hpp  IKeyValueContainer.hpp  IMapContainer.hpp  IModule.hpp  IRequest.hpp  IResponse.hpp  mainpage.hpp
api/dems-api/: Stage.hpp
async/: IService.hpp  IThreadPool.hpp  MutexQueue.hpp  SafeQueue.hpp  Service.cpp  Service.hpp  Task.hpp  ThreadPool.cpp  ThreadPool.hpp
async/tests/: test.cpp  test2.cpp  test3.cpp
config/: example.yml  http.json
docs/: Architecture.md  CLI.md  GIT.md  REPL.md
etc/zia/certs/myEncryptedSite/: cert.pass  dhparam.pem  server.csr  server.key  server.key.org  server.pem
etc/zia/sites/: defaultSite.json  httpSite.json  loggerSite.json  myEncryptedSite.json  phpSite.json
etc/zia/www/: index.html
etc/zia/wwwPhp/: get.php  index.php  post.php  session.php
etc/zia/wwwPhp/admin/: admin.php
include/net/: ISocket.hpp  Net.hpp  NetworkService.hpp  TCPSocket.hpp  UDPSocket.hpp
lib/: CMakeLists.txt
mods/: BasicModule.hpp  CMakeLists.txt  HelloModule.cpp  HelloModule.hpp  HelloWorldModule.cpp  HelloWorldModule.hpp  RequestParser.cpp  RequestParser.hpp  ResponseMakerModule.hpp
mods/mod_guiLogger/: CMakeLists.txt  README.txt
mods/mod_guiLogger/src/: HandlerFilePath.cpp  HandlerFilePath.hpp  guiLoggerModule.cpp
mods/mod_http/: CMakeLists.txt  README.txt
mods/mod_http/src/: Http.cpp  Http.hpp  mod_http.cpp
mods/mod_logger/: CMakeLists.txt
mods/mod_logger/src/: http.cpp  logger.cpp
mods/mod_php/: CMakeLists.txt
mods/mod_php/src/: HttpHeader.hpp  PHP.cpp  PHP.hpp  mod_php.cpp
mods/mod_src/: Http.hpp
mods/mod_timeProcessing/: CMakeLists.txt  README.txt
mods/mod_timeProcessing/src/: TimeProcessingModule.cpp
scripts/: clean.sh  clean_windows.bat  install.sh  install_windows.bat
sources/: main.cpp
sources/net/: Net.cpp  TCPSocket.cpp  UDPSocket.cpp
src/: Client.hpp  DLLoader.cpp  DLLoader.hpp  IMapContainer.hpp  MapContainer.cpp  MapContainer.hpp  MiniMediator.cpp  MiniMediator.hpp  MiniWebsite.cpp  MiniWebsite.hpp  NetworkService.hpp  TCPSocket.cpp  TCPSocket.hpp  main.cpp  test.cpp  tester-MapContainer.cpp  testfs.cpp
src/Console/: Parser.cpp  Parser.hpp  ReadConsole.cpp  ReadConsole.hpp
src/api/: HttpHeader.hpp  ModulesManager.cpp  ModulesManager.hpp
src/http/: HttpRequest.hpp  HttpResponse.hpp  MapContainer.cpp  MapContainer.hpp
src/net/: TCPSocket.hpp
src/server/: CMakeLists.txt  Client.cpp  Client.hpp  HttpHeader.cpp  HttpHeader.hpp  ModulesManager.cpp  ModulesManager.hpp  Website.cpp  Website.hpp  WebsiteManager.cpp  WebsiteManager.hpp  main.cpp
src/server/api/: HttpHeader.cpp  HttpHeader.hpp  ModulesManager.cpp  ModulesManager.hpp
src/server/net/: CMakeLists.txt  Client.cpp  ISocket.hpp  NetworkService.hpp  SSLSocket.cpp  SSLSocket.hpp  TCPAcceptor.cpp  TCPAcceptor.hpp  TCPClient.cpp  TCPClient.hpp  TCPSocket.cpp  TCPSocket.hpp  main.cpp  testnet.cpp
src/server/utils/: ConfigWatcher.cpp  ConfigWatcher.hpp  DLLoader.cpp  DLLoader.hpp  JsonParser.cpp  JsonParser.hpp  ParseArgs.cpp  ParseArgs.hpp  config.json
src/tests/: CMakeLists.txt  README.md  demo.cpp  testdemo.cpp  testfs.cpp  testnet.cpp  utilsTest.cpp
tests/: demo.cpp  header.hpp  templates_01.cpp  templates_02.cpp
